k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: docker-sync
  labels:
    name: docker-sync
    purpose: docker-image-sync-tool
