k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-sync-service
  namespace: docker-sync
  labels:
    app: docker-sync
    service: docker-sync
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: docker-sync
---
apiVersion: v1
kind: Service
metadata:
  name: docker-sync-nodeport
  namespace: docker-sync
  labels:
    app: docker-sync
    service: docker-sync-external
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5000
    nodePort: 30500
    protocol: TCP
    name: http
  selector:
    app: docker-sync
